	PR rtl-optimization/44858 	* combine.c (try_combine): If recog_for_combine added CLOBBERs to 	newi2pat, make sure they don't affect newpat.

* gcc.c-torture/execute/pr44858.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@163552 138bc75d-0d04-0410-961f-82ee72b054a4